# chirpstack-deployment-assistant

./: .flake8  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  lint.yml
app/: app.py
app/static/: app.js  auth.js  devices.js  gateways.js  styles.css
app/templates/: auth.html  devices.html  gateways.html  header.html  index.html
tests/: test_app.py
