[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88  # Increase from 79 to 88 to match Black
extend-ignore = ["E203", "W503","E501"]  # Common Black compatibility ignores

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
